# mecanum-consensus-dwa

./: LICENSE  README.en.md  README.id.md  README.md
analysis/: analyze_run.m  compare_scenarios.m
docs/: RUNBOOK.en.md  RUNBOOK.id.md
docs/img/: README.txt
src/haqqi_ta/: package.xml  setup.cfg  setup.py
src/haqqi_ta/haqqi_ta/: consensus_node.py  experiment_logger_node.py  experiment_master_cli.py  fault_injector_node.py  formation_manager_node.py  global_path_node.py  modified_dwa_node.py  priority_manager_node.py  sync_monitor_node.py  udp_bridge_pc.py  udp_receiver_node.py  udp_sender_node.py
src/haqqi_ta/launch/: multi_robot_bringup.launch.py  robot1_haqqi.launch.py  robot2_haqqi.launch.py  robot3_haqqi.launch.py
src/haqqi_ta/param/: consensus_params.yaml  dwa_robot1_params.yaml  dwa_robot2_params.yaml  dwa_robot3_params.yaml  scenarios.yaml
src/haqqi_ta/scripts/: aggregate_trials.py  run_trials.sh
